top nav is fixed; however, we need to modify the padding of the main wrapper depending on the visibility of the filter, and reset it on pages where there's no filter. Please fix this logic from TopBar.jsx, line 60, as it doesn't apply for the check of location different than the main page (list projects).

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -1,7 +1,8 @@
 @import 'tc-includes';
 
 .main-wrapper {
-  min-height: calc(100vh - 60px - 60px); // header and footer width
+  min-height: calc(100vh - 60px); // header and footer width
+  padding-top: 60px;
 }
 
 .content-area {
